; ModuleID = '/home/carl/AnghaBench/sway/sway/input/extr_cursor.c_apply_mapping_from_coord.c'
source_filename = "/home/carl/AnghaBench/sway/sway/input/extr_cursor.c_apply_mapping_from_coord.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (double (double, double, double)* @apply_mapping_from_coord to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @apply_mapping_from_coord(double %0, double %1, double %2) #0 {
  %4 = alloca double, align 8
  %5 = alloca double, align 8
  %6 = alloca double, align 8
  %7 = alloca double, align 8
  store double %0, double* %5, align 8
  store double %1, double* %6, align 8
  store double %2, double* %7, align 8
  %8 = load double, double* %7, align 8
  %9 = call i64 @isnan(double %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %3
  %12 = load double, double* %7, align 8
  store double %12, double* %4, align 8
  br label %21

13:                                               ; preds = %3
  %14 = load double, double* %7, align 8
  %15 = load double, double* %5, align 8
  %16 = fsub double %14, %15
  %17 = load double, double* %6, align 8
  %18 = load double, double* %5, align 8
  %19 = fsub double %17, %18
  %20 = fdiv double %16, %19
  store double %20, double* %4, align 8
  br label %21

21:                                               ; preds = %13, %11
  %22 = load double, double* %4, align 8
  ret double %22
}

declare dso_local i64 @isnan(double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
